Working version, misses localstorage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 <body>
     <header>
-        <h1>To Do List App</h1>
+        <!-- <h1>To Do List App</h1> -->
+        <div class="greeting">
+            <h2 class="title">
+                What's up,  <input type="text" id="name" placeholder="Name here" />
+            </h2>
+        </div>
 
         <form action="" id="new-task-form">
             <input 
