added button to clear all tasks

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 
     <main>
         <div class="todo-list-wrapper">
-            <h2>Tasks</h2>
+            <!-- <h2>Tasks</h2> -->
+            <div class="controls">
+                <h2>Tasks</h2>
+                <button class="clear-btn">Clear All</button>
+              </div>
             <div id="todo-list" class="list">
 <!-- 
                 <div class="task">
